[package]
name = "garden-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
#influxdb = { version = "0.6", features = ["derive"] }
log = {version = "0.4.17"}
log4rs = "1.2.0"
error-chain = "0.12.4"
byte-unit = "4.0.19"
futures = "0.3.28"
reqwest = "0.11.16"

